Test no roles in refresh tokens